added configurable qbit and vertx-sync usage.