@@ -1,8 +1,12 @@
+plugins {
+    id 'me.champeau.gradle.jmh' version '0.2.0'
+}
 group 'home'
 version '1.0-SNAPSHOT'
-
 apply plugin: 'java'
 apply plugin: 'application'
+apply plugin: 'me.champeau.gradle.jmh'
+
 
 sourceCompatibility = '1.8'
 mainClassName='home.spring.vertx.sync.Starter'
@@ -13,28 +17,25 @@ repositories {
     maven { url "http://repo.spring.io/libs-snapshot" }
 }
 configurations {
+    jmh
     provided
     quasar
     capsule
 }
+jmh {
+    jmhVersion = '1.3.2'
+}
 sourceSets {
     main {
-        compileClasspath += configurations.provided
-        runtimeClasspath += configurations.provided
+        compileClasspath += configurations.provided + configurations.jmh
+        runtimeClasspath += configurations.provided + configurations.jmh
     }
     test {
-        compileClasspath += configurations.provided
-        runtimeClasspath += configurations.provided
+        compileClasspath += configurations.provided + configurations.jmh
+        runtimeClasspath += configurations.provided + configurations.jmh
     }
 }
-buildscript {
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.2.6.RELEASE")
-    }
-    repositories {
-        jcenter()
-    }
-}
+
 dependencies {
     compile "org.springframework.boot:spring-boot-starter:1.2.6.RELEASE"
     compile ("org.springframework.boot:spring-boot-starter-data-jpa:1.2.6.RELEASE"){
@@ -42,7 +43,6 @@ dependencies {
     }
     compile "org.hibernate:hibernate-core:5.0.1.Final"
     compile "org.hibernate:hibernate-entitymanager:5.0.1.Final"
-    compile "org.mongodb:mongodb-driver-async:3.0.2"
     compile "mysql:mysql-connector-java:5.1.36"
     compile "io.advantageous.qbit:qbit-core:0.9.1-SNAPSHOT"
     compile ("io.advantageous.qbit:qbit-vertx:0.9.1-SNAPSHOT"){
@@ -54,27 +54,37 @@ dependencies {
         exclude module: "infinispan-core"
     }
     compile "org.projectlombok:lombok:1.16.4"
-    compile "io.vertx:vertx-core:3.0.0"
-    compile "io.vertx:vertx-mongo-client:3.0.0"
     compile "org.freemarker:freemarker:2.3.22"
-    compile "io.vertx:vertx-web:3.0.0"
-    compile ("io.vertx:vertx-sync:3.1.0-SNAPSHOT") {
-        exclude module: "vertx-core"
-    }
+    compile "io.vertx:vertx-core:3.1.0"
+    compile "io.vertx:vertx-mongo-client:3.1.0"
+    compile "io.vertx:vertx-web:3.1.0"
+    compile "io.vertx:vertx-sync:3.1.0"
     compile "co.paralleluniverse:quasar-core:0.7.3:jdk8"
-//    compile "co.paralleluniverse:quasar-actors:0.7.3"
     compile "org.glassfish.jersey.core:jersey-client:2.22"
     quasar "co.paralleluniverse:quasar-core:0.7.3:jdk8"
-    capsule "co.paralleluniverse:capsule:1.0"
+    capsule "co.paralleluniverse:capsule:1.0.1"
     testCompile 'junit:junit:4.11'
+    jmh 'commons-io:commons-io:2.4'
+    provided 'org.openjdk.jmh:jmh-core:1.5.1'
+    provided 'org.openjdk.jmh:jmh-generator-annprocess:1.5.1'
 }
 
 run {
-    jvmArgs "-javaagent:${configurations.quasar.iterator().next()}"
+    jvmArgs "-javaagent:${configurations.quasar.iterator().next()}  " +
+//            "-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000 " +
+            "-Xms2G -Xmx2G -server " +
+            "-XX:+UseNUMA " +
+            "-XX:+UseParallelGC " +
+            "-XX:+AggressiveOpts " +
+            "-Dvertx.disableWebsockets=true " +
+            "-Dvertx.flashPolicyHandler=false " +
+            "-Dvertx.threadChecks=false " +
+            "-Dvertx.disableContextTimings=true " +
+            "-Dvertx.disableTCCL=true"
 }
 
 task capsule(type: Jar, dependsOn: classes) {
-    archiveName = "vertx-simple-capsule.jar"
+    archiveName = "vertx-capsule.jar"
     from jar // embed our application jar
     from { configurations.runtime } // embed dependencies
 
